<resources>
    <string name="app_name">Local History App</string>
    <string name="title_map_view">Map View</string>
    <string name="title_notifications">Notifications</string>
    <string name="register_screen_title">REGISTER SCREEN</string>
    <string name="email_hint">Email:</string>
    <string name="password_hint">Password:</string>
    <string name="password_confirmation_hint">Password Confirmation:</string>
    <string name="has_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="image">image</string>
    <string name="login_screen_title">LOGIN SCREEN</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="google_maps_api_key">AIzaSyAwQJSRlA7_7ApDxUxSrRnzalts4CqRns4</string>
    <string name="add_a_new_poi">Add a new POI</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="value">value</string>
    <string name="description_hint">Description</string>
    <string name="name_hint">Name</string>
    <string name="add_poi">Add POI</string>
    <string name="speak_this_poi">Speak this POI</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="upload_image">Upload Image</string>
    <string name="image_hint">Image Url</string>
</resources>